infra/mesh/store_virtual_service.yaml
apiVersion: appmesh.k8s.aws/v1beta2
kind: VirtualService
metadata:
  name: store
  namespace: dev
spec:
  awsName: store.dev.svc.cluster.local
  provider:
    virtualRouter:
      virtualRouterRef:
        name: store
